--- a/styles.css
+++ b/styles.css
@@ -238,3 +238,28 @@ W3Schools. CSS Website Layout - Hero Image. W3Schools.com, https://www.w3schools
     letter-spacing: 5px;
     text-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
 }
+
+/* BJJ tittle*/
+.bjj-title {
+    text-align: center;
+    padding: 60px 0;
+    background-color: white;
+}
+.bjj-title h2 {
+    font-size: 3rem;
+    font-weight: bold;
+    color: #333;
+    position: relative;
+    display: inline-block;
+}
+
+.bjj-title h2:after {
+    content: '';
+    position: absolute;
+    bottom: -10px;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 60px;
+    height: 3px;
+    background-color: #f2a900;
+}
